--- a/estilos.css
+++ b/estilos.css
@@ -138,6 +138,100 @@ header a{
 /*fin de accesorios*/
 
 
+.contacto{
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 25px;
+    height: 120px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 2px;
+    border-radius: 15px;
+    border: solid #880912;
+}
+
+.contacto p{
+    font-size: 18px;
+    margin-top: 10px;
+    text-transform: none;
+}
+.contenedorContacto{
+    display: flex;
+    flex-direction: row;
+}
+.redes{
+    width: 30%;
+    height: fit-content;
+    margin-top: 35px;
+    padding-left: 15px;
+    padding: 2px;
+    text-align: center;
+    border-radius: 15px;
+    border: solid #880912;
+
+}
+
+.redes h2{
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.redes li{
+    text-decoration: none;
+    list-style: none;
+    margin: 30px;   
+}
+
+.redes a{
+    font-size: 18px;
+    color: #000;
+    text-decoration: none;
+}
+
+.redes a:hover{
+    color: #880912;
+}
+.mapa{
+    width: 60%;
+    margin: 20px;
+    font-size: 24px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+@media (max-width :480px){
+    .contacto p{
+        font-size: 12px;
+    }
+
+    .contenedorContacto{
+        flex-direction: column;
+    }
+
+    .redes{
+        width: 60%;
+        margin-left: 20%;
+
+    }
+
+    .redes a{
+        font-size: 12px;
+    }
+
+    .mapa{
+        margin-left: 10%;
+        font-size: 16px;
+    }
+
+    .mapa iframe{
+        width: 300px;
+    }
+}
+
+/*fin de contacto*/
 
 
 
