--- a/estilos.css
+++ b/estilos.css
@@ -193,6 +193,7 @@ header a{
 
 .redes a:hover{
     color: #880912;
+    font-size: 24px;
 }
 .mapa{
     width: 60%;
@@ -233,5 +234,43 @@ header a{
 
 /*fin de contacto*/
 
+.contenedorIngresos{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 5%;
+}
+
+.seccion{
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+    background-color: rgb(196, 192, 192);
+    border-radius: 5%;
+}
+
+.imgSeccion{
+    width: 40%;
+    height: 70%;
+    padding: 5%;
+}
+
+.textoSeccion{
+    text-align: center;
+    padding: 10%;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 48px;
+}
+
+.contenedorIngresos :hover{
+    transform: scale(1.1);
+    background-color: rgb(117, 116, 116);
+}
+
+@media (max-width : 480px){
+    .textoSeccion{
+        font-size: 22px;
+    }
+}
 
 
