--- a/estilos.css
+++ b/estilos.css
@@ -48,7 +48,7 @@ header a{
     border-radius: 15px;
     border: solid #880912;
     box-shadow: rgba(135, 129, 129, 0.423)0px 5px;
-    background-image: url(/src/anteojosBackground.jpg);
+    background-image: url(src/anteojosBackground.jpg);
 }
 
 .contenedorIndex :first-child {
